--- a/Brutzler/ConnectionSettingsWindow.xaml
+++ b/Brutzler/ConnectionSettingsWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Brutzler"
         mc:Ignorable="d"
-        Title="Connection Settings" Height="135.631" Width="225.788" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="Connection Settings" Height="136" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="COM Port" VerticalAlignment="Top"/>
-        <ComboBox ItemsSource="{Binding PortNames}" SelectedItem="{Binding SelectedPort}" HorizontalAlignment="Left" Margin="76,4,0,0" VerticalAlignment="Top" Width="81"/>
-        <Button Content="Update" HorizontalAlignment="Left" Margin="162,6,0,0" VerticalAlignment="Top" Width="45" Click="Button_UpdatePorts_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Device" VerticalAlignment="Top"/>
+        <ComboBox ItemsSource="{Binding PortNames}" SelectedIndex="{Binding SelectedIndex}" HorizontalAlignment="Left" Margin="58,4,0,0" VerticalAlignment="Top" Width="276"/>
+        <Button Content="Update" HorizontalAlignment="Left" Margin="339,6,0,0" VerticalAlignment="Top" Width="45" Click="Button_UpdatePorts_Click"/>
         <Button Content="OK" IsDefault="True" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="75" Click="Button_Ok_Click"/>
         <Button Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="132,65,0,0" VerticalAlignment="Top" Width="75"/>
 
